# ColorROI-Analyzer-py

./: .gitignore  AGENTS.md  README.md  app.py  pyproject.toml  requirements.txt  新建 文本文档.txt
components/colorroi_canvas/: index.html
deploy/: aws-git-sync-user-data.sh
docs/: CODEX_PROMPT.md  GIT_STATE.md  MIGRATION.md  PACKAGE_CONTENTS.md
reports/pics_hair_review/: index.html  index_standalone.html  results.csv
scripts/: batch_review_pics.py  create_review_sheet.py  inspect_images.py  smoke_test.py
src/colorroi_analyzer/: __init__.py  analysis.py  core.py
test-artifacts/: e2e-blue-rule-fix.csv  e2e-local-flow.csv  e2e-records.csv  manual-review-template.csv
tests/: test_app_masks.py  test_core.py
